<resources>
    <!-- Tiếng Anh -->
    <string name="app_name">Sdelivery Driver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="card">Card</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="en">English</string>
    <string name="vi">Vietnamese</string>
    <string name="en_code" translatable="false">en</string>
    <string name="vi_code" translatable="false">vi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Onboarding -->
    <string name="onboarding_greeting1">Hello! We are\nSmart Lunch</string>
    <string name="onboarding_greeting2">Easy and convenient with\nSmart Lunch</string>
    <string name="onboarding_greeting3">Diverse choices with\nSmart Lunch</string>
    <string name="details_onboarding_fragment1">Explore and order delicious food anytime, anywhere</string>
    <string name="details_onboarding_fragment2">Choose food, place an order, and get it delivered to your doorstep</string>
    <string name="details_onbroading_fragment3">Discover a variety of options from popular restaurants</string>
    <string name="skip">Skip</string>
    <string name="continute">Continue</string>

    <!-- Security -->
    <string name="btn_continue">Continue</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or">Or</string>
    <string name="label_sign_up">Don\'t have an account? Sign up now</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="notEmpty">Not empty</string>
    <string name="login_title">Log in</string>
    <string name="email_title">Please enter your email</string>
    <string name="forget_password">Forgot password</string>
    <string name="lable_sign_up">Don\'t have an account? <font color="#0085FF"><b>contact admin</b></font></string>
    <string name="lable_sign_in">Already have an account? <font color="#0085FF"><b>Log in</b></font></string>
    <string name="username_not_empty">This field cannot be empty.</string>
    <string name="password_not_empty">This field cannot be empty.</string>
    <string name="email_not_empty">This field cannot be empty.</string>
    <string name="display_name_not_empty">This field cannot be empty.</string>
    <string name="confirm_password_not_empty">This field cannot be empty.</string>
    <string name="login_fail">Username or password is incorrect</string>
    <string name="login_success">Login successful</string>
    <string name="display_name">Display name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_location">My location</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="notify">Notifications</string>
    <string name="dark_mode">Dark mode</string>
    <string name="change_password">Change password</string>
    <string name="language">Language</string>
    <string name="details_onbroading_fragment1">Welcome to our app! We will provide the best service for you</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signin_account">Sign in account</string>
    <string name="signup_account">Sign up account</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="signup_success">Signup successful</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="last_name_not_empty">Last name cannot be empty</string>
    <string name="phone_not_empty">Phone number cannot be empty</string>
    <string name="address_not_empty">Address cannot be empty</string>
    <string name="otp_title">Enter OTP</string>
    <string name="email_verification_hint">Enter your account\'s email address to receive the verification code</string>
    <string name="otp_message_guide">"The verification code has been sent to your email"</string>
    <string name="otp_message_question">Did not receive the code?</string>
    <string name="confirm">Confirm</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="dismiss">Dismiss</string>
    <string name="reset_password_success_title">Password Reset Successful</string>
    <string name="reset_password_success_message">Your new password has been updated. Press continue to log in.</string>
    <string name="change_password_success_message">Your new password has been updated. Press continue to exit.</string>
    <string name="verify_otp_send_button_text">Send</string>
    <string name="verify_otp_resend_button_text">Resend code</string>
    <string name="verify_otp_code_entry_hint">Enter your OTP here</string>
    <string name="verify_otp_success_title">Registration Successful</string>
    <string name="verify_otp_success_message">Your account has been registered successfully.</string>
    <string name="verify_otp_reset_password_success_title">Password Reset Successful</string>
    <string name="verify_otp_reset_password_success_message">Your new password has been updated.</string>
    <string name="reset_pass_title">Reset Password</string>
    <string name="new_password">New Password</string>
    <!--    end-->
    <string name="validateEmail">invali format</string>
    <string name="validatePassword">invali password</string>
    <string name="add_product">add_product</string>
    <string name="name_product">Bánh pizza gà phô mai 23cm đế mỏng</string>
    <string name="price_product">200.000đ</string>
    <string name="k_ch_c_">Kích cỡ</string>
    <string name="Size_M">Size M</string>
    <string name="Size_L">Size L</string>
    <string name="Size_XL">Size XL</string>
    <string name="h4">
     Thêm 200.000
</string>
    <string name="t_v_nh_di_n">
35 Tô Vĩnh Diện, Thanh Xuân
</string>
    <string name="b_n_ang_kha">Bạn đang khao khát điều gì?</string>

    <string name="pizza_th_gi">
Pizza thư giãn cùng bà Bảy
</string>
    <string name="some_id">
48.000 đ
</string>
    <string name="off">
25% Off
</string>
    <string name="type_16">
4.4
</string>
    <string name="nh_gi_cao">
Đánh giá cao
</string>
    <string name="xem_th_m">
Xem thêm
</string>
    <string name="ph_bi_n">
Phổ biến
</string>
    <string name="gi_h_ng">
Giỏ hàng
</string>
    <string name="xo_">
Xóa
</string>
    <string name="thanh_to_n_">
Thanh toán
</string>
    <string name="title_activity_prodoct">ProdoctActivity</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="order">Order</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="pay">Pay</string>
    <string name="category">Category</string>
    <string name="note_default">having no note</string>
    <string name="min_cost">0 đ</string>
    <string name="payment_id">no value</string>
    <string name="payment_fail">fail</string>
    <string name="error_500">server error</string>
    <string name="delivery">Delivery</string>
</resources>