<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_home_outline"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/red_light"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"
        />

    <item
        android:id="@+id/DeliveryOrderFragment"
        android:icon="@drawable/icon_cart"
        android:title="@string/order"
        app:cnb_backgroundColor="@color/red_light"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/icon_user"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/red_light"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white"/>

</menu>