<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <include
                android:id="@+id/appBar"
                layout="@layout/toolbar_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="124dp"
                    android:layout_height="127dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_avatar"
                        android:layout_width="124dp"
                        android:layout_height="124dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ellipse" />

                    <ImageView
                        android:id="@+id/update_avatar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/icon_edit" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name_til"
                    style="@style/PolyInputLayoutLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name_til"
                    style="@style/PolyInputLayoutLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_til"
                style="@style/PolyInputLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_til"
                style="@style/PolyInputLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/birthday"
                    android:background="@drawable/background_boder_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:text="@string/birthday"
                    />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_boder_radio_button"
                        android:checked="true"
                        android:text="@string/gender_male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_boder_radio_button"
                        android:text="@string/gender_female" />
                </RadioGroup>
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_submit"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:padding="12dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/edit_profile"
                android:textAllCaps="false" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>