<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/back_arrow"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_app"
                android:id="@+id/imageView"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                android:id="@+id/login_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:layout_centerHorizontal="true"
                android:text="@string/email_verification_hint"
                android:textColor="@color/black"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:textSize="16sp"
                android:id="@+id/tv_guide"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_guide"
                android:layout_marginTop="28dp"
                style="@style/PolyInputLayoutLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#9CA4AB"
                    android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_email"
                android:layout_marginTop="16dp"
                android:text="@string/lable_sign_up"
                android:textSize="16sp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="34dp"
                android:text="@string/continute"
                android:textColor="@color/white"
                android:layout_below="@+id/tv_sign_up"
                android:id="@+id/btn_send"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:alpha="0.3"
                android:background="@color/white"
                android:visibility="invisible" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
