<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/Rela_card"
        android:layout_width="327dp"
        android:layout_height="90dp"
        android:background="@drawable/card_sell_o">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/image"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:src="@drawable/img_6" />

        <TextView
            android:id="@+id/nameProduct_sheet"
            android:layout_width="230dp"
            android:layout_height="24dp"
            android:layout_marginLeft="11dp"
            android:layout_toRightOf="@+id/image"
            android:gravity="top"
            android:lineSpacingExtra="5sp"
            android:text="@string/pizza_th_gi"
            android:textAppearance="@style/pizza_th_gi"
            android:translationY="-2.45sp" />

        <TextView
            android:id="@+id/priceProduct_sheet"
            android:layout_width="67dp"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/image"
            android:gravity="right|top"
            android:lineSpacingExtra="5sp"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            android:translationY="-2.45sp" />

        <TextView
            android:id="@+id/size"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="?attr/colorPrimary"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_border_outline"
            android:text="@string/Size_M"/>

    </RelativeLayout>
